--- a/client/stores.html
+++ b/client/stores.html
@@ -124,107 +124,7 @@
 
                 <!-- Store Grid -->
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="storeGrid">
-                    <!-- Store Card 1 -->
-                    <div class="store-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-lg transition-all cursor-pointer" data-category="restaurants">
-                        <div class="h-40 bg-gradient-to-br from-blue-400 to-blue-600 relative">
-                            <div class="absolute top-3 right-3 bg-yellow-400 px-3 py-1 rounded-full text-sm font-semibold">4.8 ⭐</div>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg mb-1">Main Restaurant</h3>
-                            <p class="text-sm text-gray-600 mb-3">International Cuisine</p>
-                            <div class="space-y-2 text-sm mb-4">
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Time:</span> 25-35 mins</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Fee:</span> ₱40</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Min Order:</span> ₱150</p>
-                            </div>
-                            <button onclick="openStoreModal('Main Restaurant', 'International Cuisine', '4.8', '25-35 mins', '₱40', '₱150')" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 font-semibold">View Store</button>
-                        </div>
-                    </div>
-
-                    <!-- Store Card 2 -->
-                    <div class="store-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-lg transition-all cursor-pointer" data-category="restaurants">
-                        <div class="h-40 bg-gradient-to-br from-green-400 to-green-600 relative">
-                            <div class="absolute top-3 right-3 bg-yellow-400 px-3 py-1 rounded-full text-sm font-semibold">4.6 ⭐</div>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg mb-1">Pizza Paradise</h3>
-                            <p class="text-sm text-gray-600 mb-3">Italian & Pizza</p>
-                            <div class="space-y-2 text-sm mb-4">
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Time:</span> 20-30 mins</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Fee:</span> ₱35</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Min Order:</span> ₱200</p>
-                            </div>
-                            <button onclick="openStoreModal('Pizza Paradise', 'Italian & Pizza', '4.6', '20-30 mins', '₱35', '₱200')" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 font-semibold">View Store</button>
-                        </div>
-                    </div>
-
-                    <!-- Store Card 3 -->
-                    <div class="store-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-lg transition-all cursor-pointer" data-category="cafes">
-                        <div class="h-40 bg-gradient-to-br from-purple-400 to-purple-600 relative">
-                            <div class="absolute top-3 right-3 bg-yellow-400 px-3 py-1 rounded-full text-sm font-semibold">4.9 ⭐</div>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg mb-1">Coffee Corner</h3>
-                            <p class="text-sm text-gray-600 mb-3">Cafe & Pastries</p>
-                            <div class="space-y-2 text-sm mb-4">
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Time:</span> 15-20 mins</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Fee:</span> ₱30</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Min Order:</span> ₱100</p>
-                            </div>
-                            <button onclick="openStoreModal('Coffee Corner', 'Cafe & Pastries', '4.9', '15-20 mins', '₱30', '₱100')" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 font-semibold">View Store</button>
-                        </div>
-                    </div>
-
-                    <!-- Store Card 4 -->
-                    <div class="store-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-lg transition-all cursor-pointer" data-category="fastfood">
-                        <div class="h-40 bg-gradient-to-br from-orange-400 to-orange-600 relative">
-                            <div class="absolute top-3 right-3 bg-yellow-400 px-3 py-1 rounded-full text-sm font-semibold">4.7 ⭐</div>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg mb-1">Burger House</h3>
-                            <p class="text-sm text-gray-600 mb-3">Fast Food & Burgers</p>
-                            <div class="space-y-2 text-sm mb-4">
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Time:</span> 20-25 mins</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Fee:</span> ₱40</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Min Order:</span> ₱120</p>
-                            </div>
-                            <button onclick="openStoreModal('Burger House', 'Fast Food & Burgers', '4.7', '20-25 mins', '₱40', '₱120')" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 font-semibold">View Store</button>
-                        </div>
-                    </div>
-
-                    <!-- Store Card 5 -->
-                    <div class="store-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-lg transition-all cursor-pointer" data-category="restaurants">
-                        <div class="h-40 bg-gradient-to-br from-red-400 to-red-600 relative">
-                            <div class="absolute top-3 right-3 bg-yellow-400 px-3 py-1 rounded-full text-sm font-semibold">4.5 ⭐</div>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg mb-1">Sushi & Roll</h3>
-                            <p class="text-sm text-gray-600 mb-3">Japanese & Sushi</p>
-                            <div class="space-y-2 text-sm mb-4">
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Time:</span> 30-40 mins</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Fee:</span> ₱50</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Min Order:</span> ₱250</p>
-                            </div>
-                            <button onclick="openStoreModal('Sushi & Roll', 'Japanese & Sushi', '4.5', '30-40 mins', '₱50', '₱250')" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 font-semibold">View Store</button>
-                        </div>
-                    </div>
-
-                    <!-- Store Card 6 -->
-                    <div class="store-card bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-lg transition-all cursor-pointer" data-category="bakeries">
-                        <div class="h-40 bg-gradient-to-br from-pink-400 to-pink-600 relative">
-                            <div class="absolute top-3 right-3 bg-yellow-400 px-3 py-1 rounded-full text-sm font-semibold">4.8 ⭐</div>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-semibold text-lg mb-1">Dessert Paradise</h3>
-                            <p class="text-sm text-gray-600 mb-3">Desserts & Sweets</p>
-                            <div class="space-y-2 text-sm mb-4">
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Time:</span> 15-25 mins</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Delivery Fee:</span> ₱30</p>
-                                <p class="text-gray-700"><span class="text-gray-600">Min Order:</span> ₱150</p>
-                            </div>
-                            <button onclick="openStoreModal('Dessert Paradise', 'Desserts & Sweets', '4.8', '15-25 mins', '₱30', '₱150')" class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 font-semibold">View Store</button>
-                        </div>
-                    </div>
+                    <div class="col-span-full text-center text-gray-500 py-20">No stores available. Connect your backend to populate stores.</div>
                 </div>
             </main>
         </div>
