--- a/admin/client-admin.html
+++ b/admin/client-admin.html
@@ -197,12 +197,7 @@
             return {
                 showModal: false,
                 selectedOrder: null,
-                orders: [
-                    { id: 'ORD-9901', clientName: 'Juan Dela Cruz', item: 'Double Whopper Meal', total: '850.00', status: 'Delivered', address: 'Brgy. Songco, Borongan' },
-                    { id: 'ORD-9902', clientName: 'Maria Clara', item: 'Pepperoni Pizza Large', total: '499.00', status: 'Pending', address: 'Real St, Town Proper' },
-                    { id: 'ORD-9903', clientName: 'Jose Rizal', item: 'Whole Roasted Chicken', total: '350.00', status: 'Returned', address: 'Campesao, Borongan' },
-                    { id: 'ORD-9904', clientName: 'Leonor Rivera', item: '4x Iced Coffee Brew', total: '600.00', status: 'Delivered', address: 'Baybay Boulevard' }
-                ],
+                orders: [],
                 getStatusStyle(status) {
                     return {
                         'bg-green-100 text-green-700 border border-green-200': status === 'Delivered',
