--- a/client/storedialog.html
+++ b/client/storedialog.html
@@ -6,6 +6,11 @@
     <title>Store Menu</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        :root {
+            --blue: #3b82f6;
+            --blue-dark: #1e40af;
+            --blue-light: #60a5fa;
+        }
         .fade-in { animation: fade .3s ease-in; }
         @keyframes fade { from{opacity:0;transform:translateY(5px)} to{opacity:1} }
         body { padding-bottom: 100px; }
@@ -14,17 +19,17 @@
 <body class="bg-gray-100">
 
     <!-- ================= HEADER ================= -->
-    <header class="bg-blue-600 text-white p-6 shadow sticky top-0 z-40">
+    <header class="bg-white text-gray-900 p-6 shadow sticky top-0 z-40">
         <div class="flex justify-between items-center">
             <div>
                 <h1 id="storeName" class="text-3xl font-bold"></h1>
-                <p id="storeType" class="text-blue-100"></p>
+                <p id="storeType" class="text-gray-600"></p>
             </div>
             <div class="flex gap-3">
-                <button onclick="toggleFavorite()" class="bg-white text-blue-600 px-4 py-2 rounded-lg font-semibold hover:bg-gray-100 transition" id="favBtn">
+                <button onclick="toggleFavorite()" class="bg-gray-100 text-red-500 px-4 py-2 rounded-lg font-semibold hover:bg-gray-200 transition" id="favBtn">
                     ❤️ Favorite
                 </button>
-                <button onclick="history.back()" class="bg-white text-blue-600 px-4 py-2 rounded-lg font-semibold hover:bg-gray-100 transition">
+                <button onclick="window.location.href='clientDashboard.html'" class="bg-gray-100 text-gray-700 px-4 py-2 rounded-lg font-semibold hover:bg-gray-200 transition">
                     ← Back
                 </button>
             </div>
@@ -33,9 +38,9 @@
         <img id="storeImage" class="mt-4 rounded-xl w-full h-48 object-cover">
 
         <div class="flex gap-3 mt-4 text-sm flex-wrap">
-            <span id="rating" class="bg-yellow-400 text-blue-600 px-3 py-1 rounded-full font-semibold"></span>
-            <span id="deliveryTime" class="bg-white bg-opacity-20 px-3 py-1 rounded-full"></span>
-            <span id="deliveryFee" class="bg-white bg-opacity-20 px-3 py-1 rounded-full"></span>
+            <span id="rating" class="bg-yellow-400 text-gray-800 px-3 py-1 rounded-full font-semibold"></span>
+            <span id="deliveryTime" class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full"></span>
+            <span id="deliveryFee" class="bg-gray-200 text-gray-700 px-3 py-1 rounded-full"></span>
         </div>
     </header>
 
@@ -46,7 +51,7 @@
 
     <!-- ================= CATEGORY TABS ================= -->
     <div class="flex gap-2 p-4 bg-gray-50 overflow-x-auto sticky top-20 z-30">
-        <button onclick="setCategory('meals')" class="tab px-4 py-2 rounded-lg bg-blue-600 text-white font-semibold whitespace-nowrap transition">🍽️ Meals</button>
+        <button onclick="setCategory('meals')" class="tab px-4 py-2 rounded-lg text-white font-semibold whitespace-nowrap transition" style="background: var(--blue);">🍽️ Meals</button>
         <button onclick="setCategory('drinks')" class="tab px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold whitespace-nowrap hover:bg-gray-300 transition">🥤 Drinks</button>
         <button onclick="setCategory('desserts')" class="tab px-4 py-2 rounded-lg bg-gray-200 text-gray-700 font-semibold whitespace-nowrap hover:bg-gray-300 transition">🍰 Desserts</button>
     </div>
@@ -60,29 +65,7 @@
     <!-- ================= REVIEWS ================= -->
     <section class="bg-white p-6 shadow mt-6 max-w-5xl mx-auto rounded-xl">
         <h2 class="font-bold text-xl mb-4">⭐ Customer Reviews</h2>
-        <div class="space-y-3 text-sm">
-            <div class="flex items-start gap-3 pb-3 border-b">
-                <span class="text-2xl">⭐⭐⭐⭐⭐</span>
-                <div>
-                    <p class="font-semibold">Amazing food! Fast delivery.</p>
-                    <p class="text-gray-600">- John D.</p>
-                </div>
-            </div>
-            <div class="flex items-start gap-3 pb-3 border-b">
-                <span class="text-2xl">⭐⭐⭐⭐</span>
-                <div>
-                    <p class="font-semibold">Very tasty, will order again!</p>
-                    <p class="text-gray-600">- Sarah M.</p>
-                </div>
-            </div>
-            <div class="flex items-start gap-3">
-                <span class="text-2xl">⭐⭐⭐⭐⭐</span>
-                <div>
-                    <p class="font-semibold">Best store in the city!</p>
-                    <p class="text-gray-600">- Alex K.</p>
-                </div>
-            </div>
-        </div>
+        <div class="text-center text-sm text-gray-500 py-8">No reviews yet</div>
     </section>
 
     <!-- ================= CART BAR ================= -->
@@ -90,13 +73,13 @@
         <div class="max-w-5xl mx-auto flex justify-between items-center">
             <div>
                 <p class="text-gray-600 text-sm">Cart Items: <span id="cartCount" class="font-bold">0</span></p>
-                <p class="font-bold text-2xl text-blue-600">₱<span id="cartTotal">0</span></p>
+                <p class="font-bold text-2xl" style="color: var(--blue);">₱<span id="cartTotal">0</span></p>
             </div>
             <div class="flex gap-3">
                 <button onclick="viewCart()" class="bg-gray-200 hover:bg-gray-300 text-gray-800 px-6 py-3 rounded-lg font-bold transition">
                     👁️ View Cart
                 </button>
-                <button onclick="checkout()" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-bold transition shadow-lg">
+                <button onclick="checkout()" class="text-white px-6 py-3 rounded-lg font-bold transition shadow-lg" style="background: var(--blue);" onmouseover="this.style.background='var(--blue-dark)'" onmouseout="this.style.background='var(--blue)'">
                     🛒 Checkout
                 </button>
             </div>
@@ -129,31 +112,13 @@
         document.getElementById("storeImage").src = foodImages[Math.floor(Math.random() * foodImages.length)];
 
         /* ================= ADMIN EDITABLE MENU DATABASE ================= */
-        const menuDB = {
-            meals: [
-                { name: "Signature Meal", price: 299, desc: "Chef's special creation" },
-                { name: "Classic Combo", price: 449, desc: "Perfect for one person" },
-                { name: "Premium Plate", price: 599, desc: "Deluxe with premium sides" },
-                { name: "Family Bundle", price: 899, desc: "Feeds 4 people" },
-                { name: "Garden Salad", price: 249, desc: "Fresh vegetables" }
-            ],
-            drinks: [
-                { name: "Iced Coffee", price: 120, desc: "Cold brew coffee" },
-                { name: "Milk Tea", price: 150, desc: "Creamy milk tea" },
-                { name: "Fresh Juice", price: 140, desc: "Orange or mango" },
-                { name: "Iced Lemonade", price: 110, desc: "Refreshing citrus" }
-            ],
-            desserts: [
-                { name: "Chocolate Cake", price: 180, desc: "Rich chocolate layers" },
-                { name: "Cheesecake", price: 220, desc: "Creamy NY style" },
-                { name: "Ice Cream Bowl", price: 150, desc: "3 flavors mixed" },
-                { name: "Brownie Sundae", price: 190, desc: "Warm brownie with ice cream" }
-            ]
-        };
+        const menuDB = { meals: [], drinks: [], desserts: [] };
 
         /* ================= STATE ================= */
         let category = "meals";
-        let cart = JSON.parse(localStorage.getItem("cart") || "[]");
+        // No local cart persistence; start with empty cart ready for server integration
+        let cart = [];
+        let favorites = []; // in-memory favorites
 
         /* ================= MENU RENDER ================= */
         function renderMenu() {
@@ -178,12 +143,12 @@
                     <div class="flex-1">
                         <h3 class="font-semibold text-lg text-gray-800">${item.name}</h3>
                         <p class="text-sm text-gray-600">${item.desc}</p>
-                        <p class="text-blue-600 font-bold text-lg mt-2">₱${item.price}</p>
+                        <p style="color: var(--blue);" class="font-bold text-lg mt-2">₱${item.price}</p>
                     </div>
 
                     <div class="flex items-center gap-2 ml-4">
                         <input type="number" min="1" value="1" class="qty w-14 border border-gray-300 rounded px-2 py-1 text-center focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg font-semibold transition">
+                        <button class="text-white px-4 py-2 rounded-lg font-semibold transition" style="background: var(--blue);" onmouseover="this.style.background='var(--blue-dark)'" onmouseout="this.style.background='var(--blue)'">
                             + Add
                         </button>
                     </div>
@@ -207,19 +172,21 @@
             category = cat;
 
             document.querySelectorAll(".tab").forEach(t => {
-                t.classList.remove("bg-blue-600", "text-white");
+                t.style.background = "";
+                t.classList.remove("text-white");
                 t.classList.add("bg-gray-200", "text-gray-700");
             });
 
+            event.target.style.background = "var(--blue)";
             event.target.classList.remove("bg-gray-200", "text-gray-700");
-            event.target.classList.add("bg-blue-600", "text-white");
+            event.target.classList.add("text-white");
 
             renderMenu();
         }
 
         /* ================= CART FUNCTIONS ================= */
         function saveCart() {
-            localStorage.setItem("cart", JSON.stringify(cart));
+            // Intentionally not persisted to localStorage — server should handle persistence
             updateCartDisplay();
         }
 
@@ -234,33 +201,26 @@
                 alert("❌ Cart is empty!");
                 return;
             }
-            // Store cart in localStorage for cart.html to access
+            // TODO: integrate with server checkout flow. Redirecting to cart page without local storage.
             window.location.href = "cart.html";
         }
 
         /* ================= FAVORITES ================= */
         function toggleFavorite() {
-            const favs = JSON.parse(localStorage.getItem("favorites") || "[]");
-            
-            if (favs.includes(storeName)) {
-                favs.splice(favs.indexOf(storeName), 1);
+            if (favorites.includes(storeName)) {
+                favorites.splice(favorites.indexOf(storeName), 1);
                 document.getElementById("favBtn").textContent = "🤍 Favorite";
                 showNotification("❌ Removed from favorites");
             } else {
-                favs.push(storeName);
+                favorites.push(storeName);
                 document.getElementById("favBtn").textContent = "❤️ Favorited";
                 showNotification("✅ Added to favorites!");
             }
-
-            localStorage.setItem("favorites", JSON.stringify(favs));
         }
 
         // Check if store is already favorited
         function checkFavorite() {
-            const favs = JSON.parse(localStorage.getItem("favorites") || "[]");
-            if (favs.includes(storeName)) {
-                document.getElementById("favBtn").textContent = "❤️ Favorited";
-            }
+            if (favorites.includes(storeName)) document.getElementById("favBtn").textContent = "❤️ Favorited";
         }
 
         /* ================= NOTIFICATIONS ================= */
@@ -286,13 +246,8 @@
             const total = cart.reduce((t, i) => t + i.price, 0);
             alert(`✅ Proceeding to checkout...\n\nStore: ${storeName}\nItems: ${cart.length}\nTotal: ₱${total}`);
 
-            // Store order info for checkout.html
-            sessionStorage.setItem("orderData", JSON.stringify({
-                store: storeName,
-                items: cart,
-                total: total
-            }));
-
+            // Proceed to checkout (server integration required to pass cart)
+            alert('Proceeding to checkout — integrate server-side to pass cart items.');
             window.location.href = "checkout.html";
         }
 
