--- a/signin.html
+++ b/signin.html
@@ -26,8 +26,8 @@
                 <div id="login-admin-key-container" style="display: none;">
                     <input type="password" id="login-admin-key" class="input-field" placeholder="Admin Secret Key">
                 </div>
-                <input type="email" class="input-field" placeholder="Email Address" required>
-                <input type="password" class="input-field" placeholder="Password" required>
+                <input id="login-email" name="email" type="email" class="input-field" placeholder="Email Address" required>
+                <input id="login-password" name="password" type="password" class="input-field" placeholder="Password" required>
                 <button type="submit" class="submit-btn">Welcome Back!</button>
             </form>
             <form id="register" class="input-group">
@@ -41,13 +41,15 @@
                 <div id="admin-key-container" style="display: none;">
                     <input type="password" id="admin-key" class="input-field" placeholder="Enter Admin Secret Key">
                 </div>
-                <input type="text" class="input-field" placeholder="Full Name / Store Name" required>
-                <input type="email" class="input-field" placeholder="Email" required>
-                <input type="password" class="input-field" placeholder="Create Password" required>
+                <input id="full-name" name="full_name" type="text" class="input-field" placeholder="Full Name / Store Name" required>
+                <input id="reg-email" name="email" type="email" class="input-field" placeholder="Email" required>
+                <input id="reg-password" name="password" type="password" class="input-field" placeholder="Create Password" required>
                 <button type="submit" class="submit-btn">Create Account</button>
             </form>
         </div>
     </div>
+    <!-- Supabase client (UMD) -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
