Update dashboard: change cart to orders with integrated delivery tracking, remove delivery page, update stores filter to favorites

--- a/client/stores.html
+++ b/client/stores.html
@@ -114,11 +114,8 @@
                 <!-- Filters -->
                 <div class="bg-white rounded-lg shadow-sm border border-gray-200 p-4 mb-6">
                     <div class="flex gap-4 flex-wrap">
-                        <button onclick="filterStores('all')" class="filter-btn px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" data-category="all">All</button>
-                        <button onclick="filterStores('restaurants')" class="filter-btn px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200" data-category="restaurants">Restaurants</button>
-                        <button onclick="filterStores('cafes')" class="filter-btn px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200" data-category="cafes">Cafes</button>
-                        <button onclick="filterStores('bakeries')" class="filter-btn px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200" data-category="bakeries">Bakeries</button>
-                        <button onclick="filterStores('fastfood')" class="filter-btn px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200" data-category="fastfood">Fast Food</button>
+                        <button onclick="filterStores('all')" class="filter-btn px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600" data-category="all">All</button> 
+                        <button onclick="filterStores('favorites')" class="filter-btn px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200" data-category="favorites">Favorites</button>
                     </div>
                 </div>
 
