--- a/client/clientDashboard.html
+++ b/client/clientDashboard.html
@@ -54,7 +54,7 @@
                 <i data-lucide="store" class="w-5 h-5"></i> Stores
             </a>
             <button onclick="switchTab('orders')" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
-                <i data-lucide="shopping-cart" class="w-5 h-5"></i> My Orders
+                <i data-lucide="shopping-cart" class="w-5 h-5"></i> Orders
             </button>
             <a href="messages.html" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100 no-underline block">
                 <i data-lucide="message-circle" class="w-5 h-5"></i> Messages
@@ -223,8 +223,7 @@
                 <div class="flex justify-between items-center">
                     <h3 class="text-xl font-bold">My Orders</h3>
                     <div class="flex gap-3">
-                        <a href="cart.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">View Cart</a>
-                        <a href="delivery.html" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Tracking</a>
+                        <a href="cart.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Continue Shopping</a>
                     </div>
                 </div>
 
@@ -257,7 +256,8 @@
                                 <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Store</th>
                                 <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Total</th>
                                 <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Date</th>
-                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Status</th>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Order Status</th>
+                                <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Delivery Status</th>
                                 <th class="px-6 py-4 text-xs font-bold text-slate-500 uppercase">Action</th>
                             </tr>
                         </thead>
@@ -269,11 +269,73 @@
                                 <td class="px-6 py-4">Feb 7, 2026</td>
                                 <td class="px-6 py-4">
                                     <span class="px-3 py-1 bg-green-100 text-green-700 text-xs font-bold rounded-full">
+                                        Paid
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-green-100 text-green-700 text-xs font-bold rounded-full">
                                         Delivered
                                     </span>
                                 </td>
                                 <td class="px-6 py-4">
-                                    <button onclick="openOrderModal('#ORD-1023','Bes Burger House','$45.50','Feb 7, 2026','Delivered')" class="text-blue-600 hover:underline text-sm">View</button>
+                                    <button onclick="openOrderModal('#ORD-1023','Bes Burger House','$45.50','Feb 7, 2026','Paid','Delivered')" class="text-blue-600 hover:underline text-sm">View</button>
+                                </td>
+                            </tr>
+                            <tr class="hover:bg-slate-50">
+                                <td class="px-6 py-4 font-semibold">#ORD-1024</td>
+                                <td class="px-6 py-4">Pizza Palace</td>
+                                <td class="px-6 py-4 font-bold">$52.00</td>
+                                <td class="px-6 py-4">Feb 13, 2026</td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-yellow-100 text-yellow-700 text-xs font-bold rounded-full">
+                                        To Pay
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-gray-100 text-gray-700 text-xs font-bold rounded-full">
+                                        Pending
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <button onclick="openOrderModal('#ORD-1024','Pizza Palace','$52.00','Feb 13, 2026','To Pay','Pending')" class="text-blue-600 hover:underline text-sm">View</button>
+                                </td>
+                            </tr>
+                            <tr class="hover:bg-slate-50">
+                                <td class="px-6 py-4 font-semibold">#ORD-1025</td>
+                                <td class="px-6 py-4">Cafe Blend</td>
+                                <td class="px-6 py-4 font-bold">$28.75</td>
+                                <td class="px-6 py-4">Feb 12, 2026</td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-green-100 text-green-700 text-xs font-bold rounded-full">
+                                        Paid
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-blue-100 text-blue-700 text-xs font-bold rounded-full">
+                                        In Delivery
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <button onclick="openOrderModal('#ORD-1025','Cafe Blend','$28.75','Feb 12, 2026','Paid','In Delivery')" class="text-blue-600 hover:underline text-sm">Track</button>
+                                </td>
+                            </tr>
+                            <tr class="hover:bg-slate-50">
+                                <td class="px-6 py-4 font-semibold">#ORD-1026</td>
+                                <td class="px-6 py-4">Bakery Fresh</td>
+                                <td class="px-6 py-4 font-bold">$35.25</td>
+                                <td class="px-6 py-4">Feb 11, 2026</td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-green-100 text-green-700 text-xs font-bold rounded-full">
+                                        Paid
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <span class="px-3 py-1 bg-orange-100 text-orange-700 text-xs font-bold rounded-full">
+                                        To Be Delivered
+                                    </span>
+                                </td>
+                                <td class="px-6 py-4">
+                                    <button onclick="openOrderModal('#ORD-1026','Bakery Fresh','$35.25','Feb 11, 2026','Paid','To Be Delivered')" class="text-blue-600 hover:underline text-sm">Track</button>
                                 </td>
                             </tr>
                         </tbody>
@@ -384,7 +446,20 @@
                 <p><strong>Store:</strong> <span id="oStore"></span></p>
                 <p><strong>Total:</strong> <span id="oTotal"></span></p>
                 <p><strong>Order Date:</strong> <span id="oDate"></span></p>
-                <p><strong>Status:</strong> <span id="oStatus"></span></p>
+                
+                <div class="pt-4 border-t">
+                    <h4 class="font-semibold mb-3">Status Information</h4>
+                    <div class="space-y-3">
+                        <div>
+                            <p class="text-xs text-slate-500 uppercase font-bold">Payment Status</p>
+                            <span id="oStatus" class="px-3 py-1 bg-green-100 text-green-700 text-xs font-bold rounded-full inline-block"></span>
+                        </div>
+                        <div>
+                            <p class="text-xs text-slate-500 uppercase font-bold">Delivery Status</p>
+                            <span id="oDeliveryStatus" class="px-3 py-1 bg-blue-100 text-blue-700 text-xs font-bold rounded-full inline-block"></span>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="pt-4 border-t">
                     <h4 class="font-semibold mb-2">Items</h4>
@@ -491,12 +566,13 @@
         // ORDER MODAL
         const orderModal = document.getElementById('orderModal');
 
-        function openOrderModal(id, store, total, date, status) {
+        function openOrderModal(id, store, total, date, status, deliveryStatus) {
             document.getElementById('oId').innerText = id;
             document.getElementById('oStore').innerText = store;
             document.getElementById('oTotal').innerText = total;
             document.getElementById('oDate').innerText = date;
             document.getElementById('oStatus').innerText = status;
+            document.getElementById('oDeliveryStatus').innerText = deliveryStatus;
 
             orderModal.classList.remove('hidden');
             orderModal.classList.add('flex');
