Apply recent dashboard changes across all client HTML files: update user menus to remove Profile and change Settings to Account Settings

--- a/client/checkout.html
+++ b/client/checkout.html
@@ -94,8 +94,7 @@
                             <p class="font-semibold text-slate-800">John Doe</p>
                             <p class="text-xs text-slate-500">john@example.com</p>
                         </div>
-                        <a href="profile.html" class="block px-4 py-3 hover:bg-gray-50">Edit Profile</a>
-                        <a href="profile.html" class="block px-4 py-3 hover:bg-gray-50">Settings</a>
+                        <a href="clientDashboard.html" class="block px-4 py-3 hover:bg-gray-50">Account Settings</a>
                         <button onclick="logout()" class="w-full text-left px-4 py-3 text-red-500 hover:bg-red-50">Logout</button>
                     </div>
                 </div>
