--- a/client/stores.html
+++ b/client/stores.html
@@ -100,8 +100,7 @@
                                 <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
                             </button>
                             <div id="userMenu" class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-xl hidden z-50">
-                                <a href="profile.html" class="block px-4 py-2 hover:bg-gray-100 border-b border-gray-200">Profile</a>
-                                <a href="#" class="block px-4 py-2 hover:bg-gray-100 border-b border-gray-200">Settings</a>
+                                <a href="clientDashboard.html" class="block px-4 py-2 hover:bg-gray-100 border-b border-gray-200">Account Settings</a>
                                 <button onclick="logout()" class="w-full text-left px-4 py-2 hover:bg-gray-100 text-red-600">Logout</button>
                             </div>
                         </div>
