--- a/client/messages.html
+++ b/client/messages.html
@@ -5,67 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messages - Essu Express</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .sidebar-nav-item:hover { background-color: rgba(59, 130, 246, 0.1); }
-        .sidebar-nav-item.active { background-color: rgb(59, 130, 246); color: white; }
-    </style>
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
     <div class="flex h-screen bg-gray-50">
-        <!-- Sidebar -->
-        <aside class="w-64 bg-white shadow-lg">
-            <div class="p-6 border-b border-gray-200">
-                <div class="flex items-center gap-2 mb-4">
-                    <div class="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center">
-                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                        </svg>
+        <!-- Sidebar (updated to match Dashboard/Orders layout) -->
+        <aside class="w-64 bg-white border-r border-gray-200 flex-shrink-0 flex flex-col z-20">
+            <div class="p-6">
+                <div class="flex items-center gap-3 text-blue-600">
+                    <div class="bg-blue-600 text-white p-2 rounded-lg">
+                        <i data-lucide="shopping-bag" class="w-5 h-5"></i>
                     </div>
-                    <span class="font-bold text-xl">Essu</span>
-                </div>
-                <div class="bg-blue-50 rounded-lg p-4">
-                    <p class="text-sm text-gray-600">User Role:</p>
-                    <p class="font-semibold text-blue-600" id="userRole">Customer</p>
+                    <span class="text-xl font-bold tracking-tight text-slate-800">Pa-Buy Bes!</span>
                 </div>
             </div>
-            <nav class="p-4 space-y-2">
-                <a href="clientDashboard.html" class="sidebar-nav-item block px-4 py-3 rounded-lg text-gray-700 transition-all">
-                    <div class="flex items-center gap-3">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-3m0 0l7-4 7 4M5 9v10a1 1 0 001 1h12a1 1 0 001-1V9m-9 11l4-2m-9-2l4 2m0 0l4-2"></path></svg>
-                        <span>Dashboard</span>
-                    </div>
+
+            <nav class="flex-1 px-4 space-y-1">
+                <a href="clientDashboard.html" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100 no-underline block">
+                    <i data-lucide="home" class="w-5 h-5"></i> Dashboard
                 </a>
-                <a href="stores.html" class="sidebar-nav-item block px-4 py-3 rounded-lg text-gray-700 transition-all">
-                    <div class="flex items-center gap-3">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V11a2 2 0 012-2z"></path></svg>
-                        <span>Stores</span>
-                    </div>
+                <a href="stores.html" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100 no-underline block">
+                    <i data-lucide="store" class="w-5 h-5"></i> Stores
                 </a>
-                <a href="cart.html" class="sidebar-nav-item block px-4 py-3 rounded-lg text-gray-700 transition-all">
-                    <div class="flex items-center gap-3">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 20a2 2 0 11-4 0 2 2 0 014 0zm10 0a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
-                        <span>Cart</span>
-                    </div>
+                <a href="cart.html" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100 no-underline block">
+                    <i data-lucide="shopping-cart" class="w-5 h-5"></i> Orders
                 </a>
-                <a href="delivery.html" class="sidebar-nav-item block px-4 py-3 rounded-lg text-gray-700 transition-all">
-                    <div class="flex items-center gap-3">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        <span>Delivery</span>
-                    </div>
-                </a>
-                <a href="messages.html" class="sidebar-nav-item active block px-4 py-3 rounded-lg text-gray-700 transition-all">
-                    <div class="flex items-center gap-3">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path></svg>
-                        <span>Messages</span>
-                    </div>
-                </a>
-                <a href="profile.html" class="sidebar-nav-item block px-4 py-3 rounded-lg text-gray-700 transition-all">
-                    <div class="flex items-center gap-3">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
-                        <span>Profile</span>
-                    </div>
+                <a href="messages.html" class="nav-btn active w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-blue-600 bg-blue-50 font-semibold no-underline block">
+                    <i data-lucide="message-circle" class="w-5 h-5"></i> Messages
                 </a>
             </nav>
+
+            <div class="p-4 border-t border-gray-100">
+                <button onclick="logout()" class="w-full flex items-center gap-3 p-3 rounded-xl text-red-500 hover:bg-red-50 transition-colors">
+                    <i data-lucide="log-out" class="w-5 h-5"></i> Logout
+                </button>
+            </div>
         </aside>
 
         <!-- Main Content -->
@@ -196,6 +170,8 @@
     </div>
 
     <script>
+        // initialize lucide icons
+        lucide && lucide.createIcons();
         const notificationBtn = document.getElementById('notificationBtn');
         const notificationDropdown = document.getElementById('notificationDropdown');
         const userMenuBtn = document.getElementById('userMenuBtn');
