--- a/client/clientDashboard.html
+++ b/client/clientDashboard.html
@@ -50,15 +50,15 @@
             <button onclick="switchTab('dashboard')" class="nav-btn active w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-blue-600 bg-blue-50 font-semibold">
                 <i data-lucide="home" class="w-5 h-5"></i> Dashboard
             </button>
-            <a href="stores.html" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100 no-underline block">
+          <button onclick="switchTab('stores')" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
                 <i data-lucide="store" class="w-5 h-5"></i> Stores
-            </a>
+            </button>
             <button onclick="switchTab('orders')" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
                 <i data-lucide="shopping-cart" class="w-5 h-5"></i> Orders
             </button>
-            <a href="messages.html" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100 no-underline block">
+           <button onclick="switchTab('messages')" class="nav-btn w-full flex items-center gap-3 p-3 rounded-xl transition-all duration-200 text-slate-600 hover:bg-gray-100">
                 <i data-lucide="message-circle" class="w-5 h-5"></i> Messages
-            </a>
+            </button>
         </nav>
 
         <div class="p-4 border-t border-gray-100">
@@ -189,7 +189,7 @@
                     <div class="flex gap-3">
                         <input type="text" placeholder="Search stores..."
                             class="bg-slate-50 border border-slate-200 rounded-xl px-4 py-2 text-sm focus:ring-2 focus:ring-blue-100 outline-none">
-                        <a href="stores.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">View All Stores</a>
+                        <button onclick="switchTab('stores')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">View All Stores</button>
                     </div>
                 </div>
                 
@@ -220,7 +220,7 @@
                 <div class="flex justify-between items-center">
                     <h3 class="text-xl font-bold">My Orders</h3>
                     <div class="flex gap-3">
-                        <a href="cart.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Continue Shopping</a>
+                        <button onclick="switchTab('stores')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Continue Shopping</button>
                     </div>
                 </div>
 
@@ -461,7 +461,7 @@
                     <div class="flex gap-3">
                         <input type="text" placeholder="Search conversations..."
                             class="bg-slate-50 border border-slate-200 rounded-xl px-4 py-2 text-sm focus:ring-2 focus:ring-blue-100 outline-none">
-                        <a href="messages.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Open Chat</a>
+                        <button onclick="switchTab('messages')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Open Chat</button>
                     </div>
                 </div>
 
@@ -496,7 +496,7 @@
                 <!-- Header -->
                 <div class="flex justify-between items-center">
                     <h3 class="text-xl font-bold">My Profile</h3>
-                    <a href="profile.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Full Profile</a>
+                    <button onclick="switchTab('profile')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-xl font-semibold text-sm transition-colors">Full Profile</button>
                 </div>
 
                 <!-- Profile Info -->
